Start defining a template corba server.
AUTHORS
COPYING
	* NEWS,
	* configure.ac,
	* include/hpp/hrp2.hh: deleted,
	* include/hpp/hrp2/config.hh.in,
	* include/hpp/hrp2/doc.hh,
	* include/hpp/hrp2/fwd.hh: deleted,
	* include/hpp/hrp2/server.hh,
	* src/Makefile.am,
	* src/hrp2.impl.cc,
	* src/hrp2.impl.hh,
	* src/server-private.cc,
	* src/server-private.hh,
	* src/server.cc.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,1 @@
-Collectively developed within the scope of the Associated
-International Laboratory: Joint Japanese-French Robotics Laboratory
-(JRL) between AIST Japan and CNRS France.
+Florent Lamiraux CNRS - LAAS 2010
