--- a/README
+++ b/README
@@ -1,2 +1,10 @@
-This package implements a CORBA server to send request to genom module hrp2.
-This is an ad-hoc implementation.
+Introduction
+
+This package is intended to ease construction of CORBA servers by
+templating actions that are common to all servers.
+
+This package only contains one template class hpp::corba::Server. The
+parameter of this template class is the implementation of an idl
+interface.
+
+For more information, install the package and see the html documentation.
