--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+2013/09/26 Release 1.1.3
+
+    	   * Synchronize cmake submodule.
+	   * Clean up.
+
 2010/05/22 Release 0.2
 
 	   * This package is intended to ease construction of CORBA servers by
